<?xml version="1.0"?>
<package format="2">
  <name>astar</name>
  <version>0.0.0</version>
  <description>The astar package</description>

  <maintainer email="dongjae713@gmail.com">dongjae</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend> Eigen3 </depend>
  <depend> roscpp </depend>
  <depend> nav_msgs </depend>
  <depend> geometry_msgs </depend>
  <depend> tf </depend>
  <depend> visualization_msgs </depend>

</package>
